src/objects/pse__Forecast_Batch_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This object stores the settings used by Batch Apex jobs for billing forecast calculations.</description>
    <fields>
        <fullName>pse__Forecast_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>The number of records to process in a single batch. The value is 200 by default.</description>
        <inlineHelpText>The number of records to process in a single batch. The value is 200 by default.</inlineHelpText>
        <label>Billing Forecast Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Maximum_Queue_Size__c</fullName>
        <description>The maximum number of billing forecast calculations that can run at once. Leave blank to use recommended default.</description>
        <inlineHelpText>The maximum number of forecast calculations that can run at once. Leave blank to use recommended default.</inlineHelpText>
        <label>Maximum Queue Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Notifications_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, notifications from Billing Forecast batch processes are sent via Chatter to recipients listed in the Notification Recipients setting. This is deselected by default.</description>
        <inlineHelpText>If selected, notifications from Forecast batch processes are sent via Chatter to recipients listed in the Notification Recipients setting. This is deselected by default.</inlineHelpText>
        <label>Notifications by Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Notifications_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, notifications from Billing Forecast batch processes are sent via email to recipients listed in the Notification Recipients setting. This is selected by default.</description>
        <inlineHelpText>If selected, notifications from Forecast batch processes are sent via email to recipients listed in the Notification Recipients setting. This is deselected by default.</inlineHelpText>
        <label>Notifications by Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Notifications_Recipients__c</fullName>
        <description>Specifies the notification recipients for Billing Forecast batch notifications sent via Chatter or email. The value is a list of email addresses separated by semicolons (;). This setting is null by default.</description>
        <inlineHelpText>Specifies the notification recipients for Forecast batch notifications sent via Chatter or email. The value is a list of email addresses separated by semicolons (;). This setting is null by default.</inlineHelpText>
        <label>Notification Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Notifications_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, notifications from Billing Forecast batch processes are sent via tasks. This is deselected by default.</description>
        <inlineHelpText>If selected, notifications from Forecast batch processes are sent via tasks. This is deselected by default.</inlineHelpText>
        <label>Notifications by Task</label>
        <type>Checkbox</type>
    </fields>
    <label>Billing Forecast Batch Settings</label>
</CustomObject>